syntax = "proto3";

package manager;

option go_package = "protobuf/manager/golang/userpb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

enum Role {
    ROLE_UNSPECIFIED = 0;
    ROLE_SUPERUSER = 1;
    ROLE_SUPPORT = 2;
    ROLE_STORY = 3;
    ROLE_FILE = 4;
    ROLE_NOTIFICATION = 5;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string fullname = 3;
  string email = 4;
  string phone_number = 5;
  repeated Role roles = 6;
}

message User {
  string id = 1;
  string username = 2;
  string fullname = 3;
  string email = 4;
  string phone_number = 5;
  string avatar = 6;
  repeated Role roles = 7;
  google.protobuf.Timestamp last_online_at = 8;
}

message UserDetailRequest {
  string user_id = 1;
}

message UserDeleteRequest {
  string user_id = 1;
}

message UserUpdateFromSuperUserRequest {
  string user_id = 1;
  string username = 2;
  string fullname = 3;
  string email = 4;
  string phone_number = 5;
  repeated Role roles = 6;
}

message UserUpdateFromOwnRequest {
  string username = 1;
  string fullname = 2;
  string email = 3;
  string phone_number = 4;
}

enum SortDirection {
  SORT_DIRECTION_UNSPECIFIED = 0;
  SORT_DIRECTION_ASC = 1;
  SORT_DIRECTION_DESC = 2;
}

message UserListRequest {
  uint64 current_page = 1;
  uint64 page_size = 2;
  SortDirection sort_direction = 3;
  string username = 4;
}

message UserListResponse {
  uint64 current_page = 1;
  uint64 page_size = 2;
  uint64 total_number = 3;
  uint64 total_page = 4;
  repeated User users = 5;
}

service UserService {
  rpc CreateUser (CreateUserRequest) returns (User);
  rpc UserDetail (UserDetailRequest) returns (User);
  rpc UserDelete (UserDeleteRequest) returns (google.protobuf.Empty);
  rpc UserUpdateFromSuperuser (UserUpdateFromSuperUserRequest) returns (User);
  rpc UserUpdateFromOwn (UserUpdateFromOwnRequest) returns (User);
  rpc UserList (UserListRequest) returns (UserListResponse);
  rpc UserProfile (google.protobuf.Empty) returns (User);
}
